# ComputerGraphic-RayTracing

./: .gitignore  CMakeLists.txt  Camera.cpp  Camera.h  Light.cpp  Light.h  Makefile  Material.cpp  Material.h  Mesh.cpp  Mesh.h  Object.cpp  Object.h  PPMWriter.cpp  PPMWriter.h  README.md  Ray.cpp  Ray.h  RayTracer.cpp  RayTracer.h  Scene.cpp  Scene.h  SceneParser.cpp  SceneParser.h  Sphere.cpp  Sphere.h  Triangle.cpp  Triangle.h  Vector3.h  input1.txt  main.cpp  outputRaed1.ppm  raytracer.cpp  raytracer.h  scene.cpp  scene.h
